		Any number of custom stylesheets can not be used
	Fixed issue with the correct className.methodName not showing in the stepname
	Several CSS fixes
	Added UserName for System Info
	Test toggles
		Changed toggle speed and improved event performance
		Several styling changes to increase clarity for big tests
	Toggles for to filter tests by status: added new code to improve performance and smoother transitions
	Added views: this feature adds ability to flip the type of view used
	Expanded/compressed view: this feature adds the ability to change the horizontal size of content
	Added ability to use custom css styles along with custom stylesheets
	Added ability to use custom scripts
	* It is not required to call endTest() after each test now
	
ExtentReports 1.1 <03-03-2015> [Complete redesign]
	Feature Requests:
		Added LogStatus -> SKIP [Madhu]
		Added EXEC INFO tab for summary [Sujata, Roman]
		Add test execution timestamp/duration and also for the entire suite [Roman]
		Added tooltip for most controls showing what they do [Bas]
		Added ability to use relative paths for snapshots [Bas, Madhu]
		Case of TestName is default instead of uppercase [Madhu]
	Configuration() is now deprecated, use fluent config() instead
	configuration().introSummary(String) has been replaced with config().reportHeadline(String)
	This version uses a complete revamp from 1.0
	
ExtentReports 1.2 <03-17-2015>
	Added a new type of log with 2 possible argument: log(LogStatus, details)
	Added ability to attach screenshot without a log: 
		attachScreenshot(screenCapturePath, message)
		attachScreenshot(screenCapturePath)
	Added a control to expand all tests tree
	Added a control to collapse all test tree
	Added config().displayTestHeaders to show/hide TH tag of tests
	Added config().documentTitle to change the title of the report
	Changed status toggle buttons into a single dropdown (Filter Tests)
	Several styling improvements, cleaner report
	