@@ -1,18 +1,11 @@
 /*
-Copyright 2015 ExtentReports committer(s)
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-	http://www.apache.org/licenses/LICENSE-2.0
-	
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
+* Copyright (c) 2015, Anshoo Arora (Relevant Codes).  All rights reserved.
+* 
+* Copyrights licensed under the New BSD License.
+* 
+* See the accompanying LICENSE file for terms.
 */
+
 
 package com.relevantcodes.extentreports.markup;
 
